<resources>
    <string name="app_name">LoginForm2</string>
    <string name="logo">logo</string>
    <string name="app_connect">App Connect</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password\n</string>
    <string name="btnlogin">Log in</string>
    <string name="forgot_password">Forgot Password?\n</string>
    <string name="or_login_with">Or log in with\n</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sing_up">Sing up</string>
    <string name="facebook">Facebook</string>
    <string name="github">GitHub</string>
    <string name="google">Google</string>
    <string name="createaccount">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btnregister">Register</string>
    <string name="login">Log in</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logo2">Logo</string>
</resources>