<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/app_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/logoimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/appConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_connect"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/logoimage"
            android:textSize="30sp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createaccount"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/appConnect"
            android:textSize="30sp"
            android:textColor="@color/white"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/username_24"
            app:endIconMode="clear_text"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/createAccount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/username_24"
            app:endIconMode="clear_text"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/emailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/password_24"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:ellipsize="end"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            app:startIconDrawable="@drawable/password_24"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:ellipsize="end"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/btnregister"
            android:textSize="25sp"
            android:textColor="@color/app_background"

            app:backgroundTint="@color/app_primary"
            app:cornerRadius="20dp"
            app:rippleColor="@color/app_background"

            app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/dividerRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="15dp"

            app:layout_constraintTop_toBottomOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Left line -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <!-- Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginHorizontal="12dp"/>

            <!-- Right line -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/socialRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/dividerRow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/google"
                android:contentDescription="@string/google"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:background="@drawable/bg_social_circle" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/facebook"
                android:contentDescription="@string/facebook"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:background="@drawable/bg_social_circle" />

            <ImageView
                android:id="@+id/github"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/github"
                android:contentDescription="@string/github"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                app:tint="@color/white"
                android:background="@drawable/bg_social_circle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signUpRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"

            app:layout_constraintTop_toBottomOf="@id/socialRow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/app_primary"
                android:textSize="17sp"
                android:layout_marginHorizontal="10dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>